Allow linux-musl to build for tar.gz
Signed-off-by: Nino Kodabande <nkodabande@suse.com>

--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -19,27 +19,27 @@ jobs:
         with:
           command: deb
           args: -- --all-features
-      - run: xz -kfS "_${GITHUB_REF#*/v}_linux_amd64.bin.xz" target/release/moproxy 
+      - run: xz -kfS "_${GITHUB_REF#*/v}_linux_amd64.bin.xz" target/release/moproxy
       - uses: ncipollo/release-action@v1
         with:
           artifacts: target/debian/*.deb,target/release/*.bin.xz
           token: ${{ secrets.GITHUB_TOKEN }}
           allowUpdates: true
-  build-windows:
-    name: Build for Windows
-    runs-on: windows-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions-rs/cargo@v1
-        with:
-          command: build
-          args: --release --all-features
-      - run: xz -kf target/release/moproxy.exe > "moproxy_${GITHUB_REF#*/v}_windows_amd64.exe.xz"
-      - uses: ncipollo/release-action@v1
-        with:
-          artifacts: target/release/*.exe.xz
-          token: ${{ secrets.GITHUB_TOKEN }}
-          allowUpdates: true
+ # build-windows:
+ #   name: Build for Windows
+ #   runs-on: windows-latest
+ #   steps:
+ #     - uses: actions/checkout@v2
+ #     - uses: actions-rs/cargo@v1
+ #       with:
+ #         command: build
+ #         args: --release --all-features
+ #     - run: xz -kf target/release/moproxy.exe > "moproxy_${GITHUB_REF#*/v}_windows_amd64.exe.xz"
+ #     - uses: ncipollo/release-action@v1
+ #       with:
+ #         artifacts: target/release/*.exe.xz
+ #         token: ${{ secrets.GITHUB_TOKEN }}
+ #         allowUpdates: true
   build-linux-cross:
     name: Cross-build for various on Linux
     runs-on: ubuntu-latest
@@ -50,28 +50,33 @@ jobs:
           use-cross: true
           command: build
           args: --target x86_64-unknown-linux-musl --release
-      - uses: actions-rs/cargo@v1
+      - run: tar -C ./target/x86_64-unknown-linux-musl/release -czvf "moproxy_${GITHUB_REF#*/v}_linux_x86_64_musl.bin.tar.gz" moproxy
+      - uses: ncipollo/release-action@v1
         with:
-          use-cross: true
-          command: build
-          args: --target armv7-unknown-linux-gnueabihf --release
-      - uses: actions-rs/cargo@v1
-        with:
-          use-cross: true
-          command: build
-          args: --target aarch64-linux-android --release
-      - uses: actions-rs/cargo@v1
-        with:
-          use-cross: true
-          command: build
-          args: --target mips-unknown-linux-musl --release
+          artifacts: "./*.tar.gz"
+          token: ${{ secrets.GITHUB_TOKEN }}
+          allowUpdates: true
       - run: xz -kfS "_${GITHUB_REF#*/v}_linux_x86_64_musl.bin.xz" target/x86_64-unknown-linux-musl/release/moproxy
-      - run: xz -kfS "_${GITHUB_REF#*/v}_linux_armv7_gnueabihf.bin.xz" target/armv7-unknown-linux-gnueabihf/release/moproxy 
-      - run: xz -kfS "_${GITHUB_REF#*/v}_linux_aarch64_android.bin.xz" target/aarch64-linux-android/release/moproxy 
-      - run: xz -kfS "_${GITHUB_REF#*/v}_linux_mips_musl.bin.xz" target/mips-unknown-linux-musl/release/moproxy
+     # - uses: actions-rs/cargo@v1
+     #   with:
+     #     use-cross: true
+     #     command: build
+     #     args: --target armv7-unknown-linux-musleabihf --release
+     # - run: xz -kfS "_${GITHUB_REF#*/v}_linux_armv7_musleabihf.bin.xz" target/armv7-unknown-linux-musleabihf/release/moproxy
+     # - uses: actions-rs/cargo@v1
+     #   with:
+     #     use-cross: true
+     #     command: build
+     #     args: --target aarch64-linux-android --release
+     # - run: xz -kfS "_${GITHUB_REF#*/v}_linux_aarch64_android.bin.xz" target/aarch64-linux-android/release/moproxy
+     # - uses: actions-rs/cargo@v1
+     #   with:
+     #     use-cross: true
+     #     command: build
+     #     args: --target mips-unknown-linux-musl --release
+     # - run: xz -kfS "_${GITHUB_REF#*/v}_linux_mips_musl.bin.xz" target/mips-unknown-linux-musl/release/moproxy
       - uses: ncipollo/release-action@v1
         with:
           artifacts: "target/**/*.bin.xz"
           token: ${{ secrets.GITHUB_TOKEN }}
           allowUpdates: true
-
